# filtersOpenCV

./: .gitignore  CMakeLists.txt  ImageFilter.cpp  ImageFilter.h  main.cpp  opencvFilters.cpp  sequentialColorFilter
